# procon-manager

./: .env-item.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile.toml  README.md  flake.nix  openapi.json  typos.toml
.sqlx/: query-2a90ab17e10e4928277decff9d4fb173f038adf9906e487918e39a56a72d7089.json  query-2aaf7b556c6d12f9e28fd72f6ae9c532514c295f6f45807390aae32468544472.json  query-43cd7dfefa3f82fa7745e349d10b15f70de6cf55daa73bc1d1a57ae99ac11ca2.json  query-4a2e311b7584be71717fb5d335cbc6e91b7e744602859afb3c6d5391b08b478a.json  query-775d0102a91d6adf821fa3a20b5e3884c255c25d5b3f96f2c799c5c03a526c2d.json  query-7f4b6c9fefcc35bd144a81317bbed977e5e8fd3963fd1950603991006ef33c1a.json  (+5 more)
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs
api/tests/api/: auth.rs  book.rs
db/: schemas.sql  (+1 more)
item-manager/: Cargo.toml  Makefile.toml  package.nix
item-manager/.sqlx/: query-0ccc0e4982e01a7266d72b9358f072520942760315aefe4872dcc15bc8b0df1f.json  query-1b3db9cc9e2d21ceeba644b52aaab33994b98fb9243b3df3d73872b37aff5977.json  query-1b753a1371a5dce51f3158e5516fbdecb341ad18c3147ccd7a2beedeffaad9dc.json  query-1eb926c1e3a5b724c35de42a42c03975c0d95122304ff200a3c17c380aba0f87.json  query-20c1c3e89a2065a6d5a61af0b5a9374b85ba5a9cddfe6217f0103663563bfed8.json  query-2bd377e0c81a4a2a910ec18a970b21111c814921b1b228be727a031f1eb59df3.json  query-2f718513633d1c14e1e76a3263892f3551526c5c37db6f6404303ae6c67642bf.json  query-31201cb4a0b92e279fafa7412e1cdf1fe07de8f7fbb4d12be1ab113818c209dc.json  query-33d2072ebfe5745ccf6788a07857130b1f4ef27d15573db5b39df88c6ab87a27.json  query-3d8cfcbb2e1adbdf2f5d392695b04e0fae4e16e8bb11d3f6fde6e72e215d16a2.json  query-3dc0530f53686b8fbefdb2512020d1229b41b09ce1ecb160b0f813f743ff20c3.json  query-4aecb6b1640a7f131cca547549a92cba7e42e08f0c8c35852bb87ef0dbd14b7c.json  query-4bbd7ed84ae1a27aa88c471b4efa7061c9c8894768e3017f50c34d3b61790e26.json  query-569322a24ac456c006bf9a31d597696afb4e480f7657592c4df1009e6ec616bb.json  query-5b49657ae9c0ad29a8108e7ae7d4047fc0cfddf5b649b55538961eef4599c174.json  query-5e4bb3f6bbb2d4f6b659ce641d293ed554825d89fdcd627433629f6ad6e0658c.json  query-5e9aac0b3778d4f7378b8daa7c9898d8a91b23f4f1825f79f003d82e70b7095f.json  query-5f65f9a5b10e41cee0b8ebc7f234f4ee4a27d2691b2c7921d78a1b4d53296035.json  query-6145dbd693e2d7ef8392f108e58594f060577d103468a80712eb846e529130ad.json  query-628c8793425d391b48e59e5f53888f13414762a9c328023a30a878c7d7e1cbb3.json  query-65bdbd24a7fe7bdee8fdf82c559295da75825b13cb3331e2891768ed1304cb20.json  query-67d69da6897f9b381cda265d88aff4a872845a165c1697a771e1a16645d526ec.json  query-6859746f2d9e2d164fb6b1e7f9ef41e3c90931466c785a508bb0c76460f2a6c9.json  query-74abc5b82372a8e7408ba254e9d08c86e1e03c709c701484a17609b49f4f25b2.json  query-75b4ecca00ea03bd7b67764ff208277913977db4e2dd120ef4e6d7e6f51415b1.json  query-8c34e1bb2213aaf4abdba20d91e91fac429f24b25cb6b9c617820443054cc5bb.json  query-8d5dfc97a9dc845a563e12c8e5c03f2786cf0195e1fe7b1e2889ef1271211c62.json  query-8f9d824a8e1710e3c1222fa3bdb2de13277e5f4758eea12a38dc00d4dbfa35e1.json  query-97bc0c28cd71d94cd6de5bb96c032bed1c921f20b968c2c736d821b98a100717.json  query-a44b9c37b89871f4f2a93fb7986f4d6337c2eafac5674408d3fa78e6c15f4f3b.json  query-b4e2fac4f2354cbe6fbef38ee0fbc0d118f0ae88045fe2e6256c66aeda6c284e.json  query-b73e44fee75b5b81b75f6cfee434c4d24fc987e98394b9925d482d5b51922d11.json  query-ba34aa8abcc4b8d96d31b4c9a6b2a1c845e3a916ab0c6a1b659985b7626fad83.json  query-bbb48f76589379e8f9ce6364f76752774797728b3245c569532077a11c33c13c.json  query-bc7f14c84b7cf2987009c3e5ad355fa9ea1d8210c560af35107463143a04d598.json  query-c0515c708039964620656f76e5cb3c2d2bdeb7fda5f8df90453760c51e901ae3.json  query-c4faf9a11a3628a595217c1015e64b5d2698dd994893d71b32b21af33d457203.json  query-c56221035185aba3a14feff23d170e40bf5e96181bda5e3e724062d1b84d90d1.json  query-d008c35141ef3a8927e455eacfb88d5e5baa5daa2b70e588fc5495f9d7371c9d.json  query-d26a38b8aedd6da811a99699bd941acc0ac81316e550ea58a391c7b5756f2027.json  (+15 more)
item-manager/adapter/: Cargo.toml
item-manager/adapter/migrations/: 20240721050548_start.down.sql  20240721050548_start.up.sql  20241229000100_add_unique_checkout_item_id.down.sql  20241229000100_add_unique_checkout_item_id.up.sql  20260513000100_restrict_checkout_history_deletes.down.sql  20260513000100_restrict_checkout_history_deletes.up.sql  20260530000100_add_item_location.down.sql  20260530000100_add_item_location.up.sql
item-manager/adapter/src/database/: mod.rs
item-manager/adapter/src/database/model/: auth.rs  book.rs  checkout.rs  item.rs  mod.rs
item-manager/adapter/src/repository/: auth.rs  book.rs  checkout.rs  item.rs  user.rs
item-manager/adapter/src/repository/fixtures/: book.sql  book_checkout.sql  book_list.sql  item.sql  item_list.sql
item-manager/api/: Cargo.toml
item-manager/api/src/: extractor.rs  lib.rs  openapi.rs
item-manager/api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  item.rs  user.rs
item-manager/api/src/model/: auth.rs  book.rs  checkout.rs  item.rs  list.rs  mod.rs  user.rs
item-manager/api/src/route/: auth.rs  book.rs  health.rs  item.rs  mod.rs  user.rs  v1.rs
item-manager/api/tests/api/: auth.rs  book.rs  helper.rs  item.rs  main.rs  user.rs
item-manager/db/: initial_setup.sql
item-manager/kernel/: Cargo.toml
item-manager/kernel/src/model/: id.rs  list.rs  mod.rs  role.rs
item-manager/kernel/src/model/auth/: event.rs
item-manager/kernel/src/model/book/: event.rs  mod.rs
item-manager/kernel/src/model/checkout/: event.rs  mod.rs
item-manager/kernel/src/model/item/: book.rs  general.rs  laptop.rs  mod.rs
item-manager/kernel/src/model/user/: event.rs  mod.rs
item-manager/kernel/src/repository/: book.rs  checkout.rs  item.rs  mod.rs  user.rs
item-manager/registry/: Cargo.toml
item-manager/registry/src/: lib.rs
item-manager/shared/: Cargo.toml
item-manager/shared/src/: config.rs  env.rs  error.rs
shared/: Cargo.toml
shared/src/: config.rs  error.rs
(+57 files in other folders)
