[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
api = { path = "./api" }
kernel = { path = "./kernel" }
adapter = { path = "./adapter" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "uuid",
  "chrono",
  "macros",
  "postgres",
  "migrate",
] }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
derive-new = "0.7.0"

[dependencies]
api.workspace = true
kernel.workspace = true
adapter.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
