[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
api = { path = "./api" }
kernel = { path = "./kernel" }
adapter = { path = "./adapter" }
shared = { path = "./shared" }
registry = { path = "./registry" }
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "uuid",
  "chrono",
  "macros",
  "postgres",
  "migrate",
] }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
derive-new = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
thiserror = "2.0.11"
strum = { version = "0.27.1", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
bcrypt = "0.17.0"
redis = "0.29.0"
garde = "0.22.0"

[dependencies]
api.workspace = true
adapter.workspace = true
shared.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
