[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel.workspace = true
shared.workspace = true
registry.workspace = true
axum.workspace = true
axum-extra.workspace = true
serde.workspace = true
uuid.workspace = true
derive-new.workspace = true
strum.workspace = true
garde.workspace = true
