[package]
edition = "2024"
name = "item-manager"
version = "0.1.0"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
anyhow = "1.0.95"
api = { path = "./api" }
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
derive-new = "0.7.0"
garde = { version = "0.22.0", features = ["derive", "email"] }
kernel = { path = "./kernel" }
mac_address = { version = "1.0.1", features = ["serde"] }
mockall = "0.13.1"
registry = { path = "./registry" }
serde = { version = "1.0.217", features = ["derive"] }
shared = { path = "./shared" }
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "uuid",
  "chrono",
  "macros",
  "postgres",
  "migrate",
  "mac_address",
] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tracing = { version = "0.1.41", features = ["log"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum", "vendored"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[dependencies]
adapter.workspace = true
anyhow.workspace = true
api.workspace = true
axum.workspace = true
dotenvy = "0.15.7"
registry.workspace = true
shared.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
