[package]
edition = "2024"
name = "adapter"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
derive-new.workspace = true
jsonwebtoken = "9.2.0"
kernel.workspace = true
mac_address.workspace = true
serde.workspace = true
shared.workspace = true
sqlx.workspace = true
tokio.workspace = true
