[package]
edition = "2024"
name = "api"
version = "0.1.0"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
derive-new.workspace = true
garde.workspace = true
kernel.workspace = true
registry.workspace = true
serde.workspace = true
shared.workspace = true
strum.workspace = true

[dev-dependencies]
anyhow.workspace = true
hyper = "0.14.27"
mockall.workspace = true
rstest = "0.18.2"
serde_json = "1.0.105"
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
