[package]
edition = "2024"
name = "kernel"
version = "0.1.0"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
mac_address.workspace = true
mockall.workspace = true
serde.workspace = true
shared.workspace = true
sqlx.workspace = true
strum.workspace = true
uuid.workspace = true
