[package]
edition = "2024"
name = "shared"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bcrypt.workspace = true
garde.workspace = true
shuttle-runtime.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
